--- a/选择题小工具/index.html
+++ b/选择题小工具/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matrix - The art of coding</title>
     <meta name="description" content="matrix.sysu.edu.cn">
-    <link rel="stylesheet" href="./base.css">
-    <link rel="stylesheet" href="./common.css">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
