--- a/选择题小工具/tool.html
+++ b/选择题小工具/tool.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>选择题小工具</title>
-    <link rel="stylesheet" href="./base.css">
-    <link rel="stylesheet" href="./common.css">
-    <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./tool.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/tool.css">
 </head>
 <body>
     <!-- 顶部导航栏 -->
